Package: R.filesets
===================

Version: 2.3.9 [2014-01-05]
o CLEANUP: copyTo() and renameTo() for GenericDataFile had verbose
  output enabled by default.


Version: 2.3.8 [2014-01-04]
o Added duplicated(), anyDuplicated() and unique() for GenericDataSet,
  which all compare GenericDataFile:s using the equals() method.
o Now c() for GenericDataFileSet also works to append GenericDataFile:s.
  Added package system test for common use cases of c().


Version: 2.3.7 [2013-12-18]
o Now readDataFrame(..., header=FALSE) works as expected for tabular
  text files without headers.
o Added nbrOfColumns() for GenericTabularFile, which, if the number
  of columns cannot be inferred from the column names, will fall back
  to read the first row of data and use that as the number of columns.
o Now nbrOfColumns() for ColumnNamesInterface returns NA if column names
  cannot be inferred and hence not be counted.
o BUG FIX: Now getReadArguments() for TabularTextFile returns a
  'colClasses' vector of the correct length also in the case when
  there are no column names.


Version: 2.3.6 [2013-11-27]
o Added a generic loadRDS() available for plain files and RdsFile:s.


Version: 2.3.5 [2013-11-21]
o Added RdsFile and RdsFileSet objects for handling *.rds file sets.
o CLEANUP: There's no longer a need to reset class for GenericSummary.


Version: 2.3.4 [2013-11-19]
o Added ChecksumFile and ChecksumFileSet.


Version: 2.3.3 [2013-11-15]
o Now extract() for GenericDataFileSet also handles when the data set to
  be extracted is empty, e.g. extract(GenericDataFileSet(), NA_integer_).
  Also, added support for argument onMissing="dropall", which drops all
  files if one or more missing files where requested.
  Added package system tests for these case.


Version: 2.3.2 [2013-11-11]
o SPEEDUP: GenericDataFileSet$byPath(..., recursive=TRUE) would be very
  slow setting up the individual files, especially for large data sets.
  Now it's only slow for the first file.

