@@ -4,6 +4,7 @@ Package: R.filesets
 Version: 2.3.9 [2014-01-05]
 o CLEANUP: copyTo() and renameTo() for GenericDataFile had verbose
   output enabled by default.
+o CLEANUP: digest2() is now defunct.
 
 
 Version: 2.3.8 [2014-01-04]
